<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpediaLoginActivity">

    <com.expedia.account.PanningImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_mtfuji_crop"
        app:acct__piv_panFrom="0.1"
        app:acct__piv_panTo="0.55"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/white_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/acct__exp_launch_blue" />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/acct__white" />

    </LinearLayout>

    <com.expedia.account.sample.MockAccountView
        android:id="@+id/account_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:fitsSystemWindows="true"
        app:acct__flavor_text_color="@color/flavor_text"
        app:acct__input_text_error_color="@color/bg_input_text_error"
        app:acct__input_text_hint_color="@color/acct__bg_input_text_hint"
        app:acct__input_text_good_color="@color/bg_input_text_good"
        app:acct__input_text_default_color="@color/bg_input_text_default"
        app:acct__toolbar_icon_color="@color/toolbar_icon"
        app:acct__user_info_text_color="@color/user_info_text_color"
        app:acct__welcome_text_color="@color/welcome_text_color"
        app:acct__sign_in_button_text_color="@color/btn_sign_in_text"
        app:acct__sign_in_button_background_drawable="@drawable/bg_btn_sign_in"
        app:acct__checkmark_good_drawable="@drawable/ic_checkmark"
        app:acct__checkmark_warning_drawable="@drawable/ic_warning"
        app:acct__logo_small_drawable="@drawable/logo_small"
        app:acct__logo_large_drawable="@drawable/logo_large"
        app:acct__logo_text_drawable="@drawable/logo_text"
        app:acct__logo_text_drawable_margin_left="6dp"
        app:acct__logo_text_drawable_margin_top="5dp"
        app:acct__brand="@string/brand"
        android:visibility="gone" />
    
    <com.expedia.account.sample.MockNewAccountView
        android:id="@+id/new_account_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:acct__brand_string="@string/brand"
        app:acct__header_color="@color/brand_primary"
        app:acct__tab_indicator_color="@color/exp_launch_yellow"
        app:acct__tab_text_color="#8CFFFFFF"
        app:acct__tab_text_selected_color="#FFFFFF"
        app:acct__cancel_drawable="@drawable/com_facebook_button_like_icon_selected"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/sign_in_status_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="96dp">

        <ImageView
            android:id="@+id/sign_in_status_thumbs_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_thumbs_up"/>

        <TextView
            android:id="@+id/sign_in_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:textSize="36dp"
            android:textAllCaps="true"
            android:text="@string/Success"/>

        <TextView
            android:id="@+id/sign_in_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18dp"
            android:text="@string/Youre_all_signed_in"/>

        <Button
            style="Widget.AppCompat.Button.Borderless"
            android:id="@+id/button_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/Done" />
        <Button
            style="Widget.AppCompat.Button.Borderless"
            android:id="@+id/button_signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/Sign_out" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/build_date"
        android:layout_gravity="end|bottom"/>

</FrameLayout>
